--- a/playground/src/pages/index.astro
+++ b/playground/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Avatar from '../components/Avatar.astro';
 import Card from '../components/Card.astro';
 import Layout from '../layouts/Layout.astro';
 ---
@@ -38,6 +39,9 @@ import Layout from '../layouts/Layout.astro';
 			To get started, open the directory <code>src/pages</code> in your project.<br />
 			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
 		</p>
+		<Avatar server:defer>
+			<div slot="fallback">Avatar fallback, instant</div>
+		</Avatar>
 		<ul role="list" class="link-card-grid">
 			<Card
 				href="https://docs.astro.build/"
